public/project/css/style.css
/* ... */
.favorites__top-filter-list.active {
  display: block;
}

.favorites__top-filter-item {
  color: #022a51;
  transition: 0.2s;
}

.favorites__top-filter-item:not(:last-child) {
  margin-bottom: 13px;
}

.favorites__top-filter-item:hover {
  color: #508cfa;
}

.favorites__top-delete {
  color: #ffffff;
  font-size: 15px;
  background: #508cfa;
  text-align: center;
  padding: 10px 50px;
  cursor: pointer;
  border-radius: 5px;
}

.favorites__list {
  display: flex;
  flex-wrap: wrap;
  gap: 19px;
  margin-bottom: 20px;
}

.favorites__list-item {
  flex: 0 0 calc(33.3% - 12.5px);
  position: relative;
  border-radius: 5px;
  border: 1px solid #e3e9f6;
  padding-bottom: 19px;
  cursor: pointer;
}

.favorites__item-exit {
  position: absolute;
  top: 11px;
  right: 11px;
  width: 18px;
  cursor: pointer;
}

.favorites__item-img img {
  width: 100%;
}

.favorites__item-text {
  padding-left: 20px;
  padding-top: 15px;
}

.favorites__item-price {
  color: #002850;
  font-size: 24px;
  font-weight: 700;
  margin-bottom: 8px;
}

.favorites__item-rooms {
  color: #002850;
  font-size: 15px;
  margin-bottom: 8px;
}

.favorites__item-rooms span {
  color: #c2c2c2;
  margin: 0 4px;
}

.favorites__item-address {
  color: #c2c2c2;
  font-size: 15px;
}

.favorites__bottom-buttons {
  display: flex;
  align-items: center;
  justify-content: center;
}

.favorites__pages-prev {
  height: 9px;
  cursor: pointer;
}

.favorites__pages-prev img:last-child {
  display: none;
  transform: rotate(180deg);
}

.favorites__pages-prev.active img:first-child {
  display: none;
}

.favorites__pages-prev.active img:last-child {
  display: block;
}

.favorites__bottom-pages {
  display: flex;
  justify-content: space-between;
  margin: 0 28px;
}

.favorites__bottom-pages_m {
  display: none;
}

.favorites__pages-item {
  color: #002850;
  padding: 11px 22px;
  border-radius: 5px;
  border: 1px solid #e3e9f6;
  display: flex;
  justify-content: center;
  align-items: center;
  max-width: 50px;
  cursor: pointer;
}

.favorites__pages-item:not(:last-child) {
  margin-right: 10px;
}

.favorites__pages-item.active {
  color: #ffffff;
  border: none;
  background: #508cfa;
}

.favorites__pages-item_m {
  color: #002850;
  font-size: 17px;
}

.favorites__pages-next {
  height: 9px;
  cursor: pointer;
}

.favorites__pages-next img:first-child {
  display: block;
  transform: rotate(180deg);
}

.favorites__pages-next img:last-child {
  display: none;
}

.favorites__pages-next.active img:first-child {
  display: none;
}

.favorites__pages-next.active img:last-child {
  display: block;
}

.favorites__page-from {
  margin: 0 8px;
}

.footer-w {
  background: #f6f8fc;
}

.footer {
  padding-top: 49px;
  padding-bottom: 58px;
}

.footer__top {
  text-align: center;
  margin-bottom: 52px;
}

.footer__logo img {
  width: 198px;
}

.footer__nav {
  max-width: 764px;
  margin: 0 auto 55px;
}

.footer__nav-list {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.footer__nav-item {
  display: block;
  color: #333333;
}

.footer__content {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.footer__subtitle {
  color: #508cfa;
  display: flex;
  transition: 0.2s;
  line-height: 24px;
  text-align: center;
}

.footer__subtitle:first-child {
  margin-bottom: 5px;
}

.footer__subtitle:hover {
  color: #254060;
}

.footer__bottom {
  margin-top: 51px;
  text-align: center;
}

.footer__slogan {
  color: #333333;
  text-align: center;
}

.footer_place .footer__nav {
  max-width: 605px;
  margin: 0 auto 25px;
}

.footer_place .footer__nav-list {
  justify-content: center;
  gap: 20px;
}

.placemark {
  background: #fa0064;
  border-radius: 50%;
  border: 2px solid #ffffff;
  background-size: 100%;
  width: 17px;
  height: 17px;
  /* transform: translate(-17px, -17px); */
  cursor: pointer;
}
.placemark.active {
  background: #64e664;
}

.placemark__white {
  background: #ffffff;
  border: 2px solid #fa0064;
}

.popover {
  font-family: "Geometria";
}

.popover .close {
  display: none;
}

.popover-content {
  font-size: 14px;
  background-color: #ffffff;
  padding: 6px 5px;
  color: #002850;
  width: auto;
  text-align: center;
  line-height: 18px;
}

.popover-content .ymaps-2-1-79-balloon__content {
  margin-right: 0px;
}

.ymaps-2-1-79-balloon__content {
  background: #000000;
}

.ballon-country {
  font-size: 14px;
  color: #002850;
}

#map-country .ymaps-2-1-79-balloon__content {
  margin-right: 0px;
  padding: 0px;
}

#map-country .ymaps-2-1-79-balloon {
  max-width: 320px;
  margin: 0 auto;
}

#map-country .ymaps-2-1-79-balloon__close {
  display: none;
}

.balloon-city-w {
  /* padding-bottom: 20px; */
}

.balloon-city {
  font-family: "Geometria";
  display: flex;
  align-items: center;
}

.balloon-city__text {
  text-align: start;
  margin-right: 9px;
  font-size: 14px;
  line-height: 18px;
  color: #002850;
}

.balloon-city__price {
  font-weight: 700;
}

.balloon-city__address {
  color: #c2c2c2;
  font-size: 15px;
  line-height: 24px;
  margin-bottom: 3px;
  display: none;
}

.balloon-city__rooms_m {
  display: none;
}

.balloon-city__rooms_m span {
  margin: 0 8px;
}

.balloon-city__img {
  cursor: pointer;
}

.balloon-city__img img {
  max-width: 84px;
}

.ballon-city__content {
  background: #ffffff;
  z-index: 700;
  padding: 2px 0px 5px 6px;
  max-width: 193px;
}

#map_city .ymaps-2-1-79-balloon__content {
  margin-right: 0px;
  padding: 0px;
}

#map_city .ymaps-2-1-79-balloon__close-button {
  background: url(../img/svg/exit_blue.svg);
  background-repeat: no-repeat;
  background-size: cover;
  opacity: 1;
  width: 18px;
  height: 18px;
  transform: translate(-20px, 20px);
  cursor: pointer;
}

.header-w.fixed {
  position: fixed;
  z-index: 11;
  background: #ffffff;
  width: 100%;
}

.header__top {
  padding: 33px 40px 0px;
  justify-content: space-between;
  margin: 0 auto;
  align-items: center;
  display: none;
}
/* ... */

